--- a/css/style.css
+++ b/css/style.css
@@ -67,11 +67,11 @@ h1, h3, h6{
 }
 
 .uppermaindiv p{
-    font-size: 110%;
+    font-size: 23px;
 }
 
 .lowermaindiv h1{
-    font-size: 500%;
+    font-size: 80px;
     line-height: 40%;
 }
 
@@ -216,22 +216,21 @@ h1, h3, h6{
     position: absolute;
     bottom: 0;
     color: #ffffff;
-    font-size: 200%;
+    font-size: 35px;
     margin: 2%;
     line-height: 50%;
     text-shadow: 2px 2px #00B0FF;
 }
 
 #pagepiling .headertitle h1{
-    font-size: 400%;
+    font-size: 90px;
 }
 
 #pagepiling .upperlineprojects h1{
     color: #ffffff;
-    font-size: 200%;
     margin: 2%;
     text-shadow: 2px 2px #00B0FF;
-    font-size: 300%;
+    font-size: 50px;
     position: absolute;
     top: 0;
     right: 10%;
@@ -389,7 +388,6 @@ a{
 
 .resumediv a{
     color: grey;
-    font-size: 125%;
 }
 
 .hiddenclass{
